--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springboot_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT
-    username: root
+    url: jdbc:h2:mem:rex-demo
+    username: sa
     password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.h2.Driver
 
   aop:
     # 加入@EnableAspectJAutoProxy. (引入時已經預設為開啟)
@@ -13,10 +13,14 @@ spring:
 
   # jpa setting
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       use-new-id-generator-mappings: true
       jdbc:
         time_zone: GMT+08:00
     show-sql: true
+  h2:
+    # console: http://localhost:8080/h2-console/
+    console:
+      enabled: true
