--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <!--本Project識別-->
     <groupId>org.example</groupId>
-    <artifactId>springBoot-jpa-mysql-demo</artifactId>
+    <artifactId>rex-springboot-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>DemoProject</name>
     <description>Demo project for Spring Boot</description>
